GNOME Bugzilla – Bug 738522
libtracker-data: Guard against failure to create a FTS update statement
Last modified: 2014-10-14 14:26:15 UTC
See this Fedora bug: https://bugzilla.redhat.com/show_bug.cgi?id=1022221 The crash itself is addressed by this commit: commit b2997aa91496c1b9ec2c226ee6f26d5b198040a1 Author: Debarshi Ray <debarshir@gnome.org> Date: Mon Oct 13 14:27:07 2014 +0200 libtracker-data: Guard against invalid statements in public API https://bugzilla.gnome.org/show_bug.cgi?id=738450 The question is, why would this statement return a NULL stmt in tracker_db_interface_sqlite_fts_update_text: stmt = tracker_db_interface_create_statement (db_interface, TRACKER_DB_STATEMENT_CACHE_TYPE_UPDATE, &error, "DELETE FROM fts WHERE docid=?"); Unless there is an error from sqlite. The attached session log is very dirty and shows tracker-store constantly crashing. So it is hard to guess. The only meaningful entry there is: Tracker-CRITICAL **: D-Bus service name:'org.freedesktop.Tracker1' is already taken, perhaps the daemon is already running? I think we should atleast handle the error from tracker_db_interface_create_statement and warn about it as we are doing elsewhere.
Created attachment 288506 [details] [review] libtracker-data: Guard against failure to create a FTS update statement
This applies to master, 1.2.x, 1.0.x and 0.16.x.
Comment on attachment 288506 [details] [review] libtracker-data: Guard against failure to create a FTS update statement Looks right to me, thanks!
Thanks for the review, Martyn!