libtracker-data: Guard against failure to create a FTS update statement

https://bugzilla.gnome.org/show_bug.cgi?id=738522